--- a/about.qmd
+++ b/about.qmd
@@ -38,7 +38,7 @@ B.S in Public Administration \| December 2011
 #### **Astranis Space Technologies**
 
 | Business Intelligence Developer
-| Jul 2024 - Dec 2024
+| Jul 2024 - Current
 
 #### **Lam Research**
 
