--- a/posts/Billboard's Top 100 (2000)/bill.qmd
+++ b/posts/Billboard's Top 100 (2000)/bill.qmd
@@ -2,11 +2,7 @@
 title: "Billboard Top 100's in 2000"
 image: bill.jpeg
 categories:
-  - Time Series Analysis
-  - Data Analysis
-  - Data Science
-  - Data Visualization
-  - Trend Analysis
+  - Data Analysis Project
 ---
 
 ```{=html}
