--- a/posts/Labor Utilization Dashboard/powerbila.qmd
+++ b/posts/Labor Utilization Dashboard/powerbila.qmd
@@ -12,13 +12,7 @@ page-layout: article
 title-block-banner: false 
 image: Pbi1.png
 categories: 
-  - Power BI
-  - Data Visualization
-  - KPI Analysis
-  - HR Analytics
-  - Employee Retention
-  - Turnover Analysis
-  - Data-Driven Decision Making
+  - People/HR Analytics
 ---
 
 ```{=html}
