--- a/posts/Veteran Compensation Benefits/VCB.qmd
+++ b/posts/Veteran Compensation Benefits/VCB.qmd
@@ -2,11 +2,6 @@
 title: "Analysis of Veteran Compensation Benefits by Service Period and Location"
 image: VCB.png
 categories:
-  - Python
-  - Data Analysis
-  - Data Science
-  - Data Visualization
-  - Trend Analysis
   - Machine Learning
 ---
 
@@ -50,7 +45,6 @@ nav {
 
 This project aims to analyze the distribution of veterans receiving compensation benefits from the Veterans Benefits Administration (VBA) as of the end of Fiscal Year 2022. The analysis focuses on identifying the locations with the highest count of veterans and the periods of service with the most beneficiaries.
 
-
 ```{ipython}
 import pandas as pd
 presdata = pd.read_csv("/Users/Shared/Python/Mid-review 26-6-2023/Compensation_Service_Veteran_Count_By_Period_of_Service_and_Location.csv")
@@ -67,9 +61,9 @@ The data provides a detailed count of veterans by state or country of residence 
 
 ## Inquiry-Based Analysis:
 
-- Question 1: What residence has the highest count of veterans on the rolls with VBA for compensation benefits as of the end of Fiscal Year 2022?
+-   Question 1: What residence has the highest count of veterans on the rolls with VBA for compensation benefits as of the end of Fiscal Year 2022?
 
-- Question 2: What period of service has the highest count of veterans on the rolls with VBA for compensation benefits as of the end of Fiscal Year 2022?
+-   Question 2: What period of service has the highest count of veterans on the rolls with VBA for compensation benefits as of the end of Fiscal Year 2022?
 
 ```{ipython}
 import pandas as pd
@@ -88,8 +82,6 @@ print(f"Residence with the highest count of veterans: {top_residence} ({top_resi
 print(f"Period of Service with the highest count of veterans: {top_pos} ({top_pos_count} veterans)")
 
 ```
-
-
 
 ```{ipython}
 import matplotlib.pyplot as plt
@@ -133,15 +125,14 @@ plt.show()
 
 ![](figure_vcb2.png)
 
-![](figure_vcb3.png)
-## Insights and Findings:
+![](figure_vcb3.png) \## Insights and Findings:
 
-- Residence Analysis: Identified the states or countries with the highest number of veterans receiving compensation benefits.
+-   Residence Analysis: Identified the states or countries with the highest number of veterans receiving compensation benefits.
 
-- Period of Service Analysis: Determined which periods of service had the largest populations of veterans on the rolls.
+-   Period of Service Analysis: Determined which periods of service had the largest populations of veterans on the rolls.
 
-- Distribution Patterns: Visualized the distribution of veterans across different regions and service periods to identify any significant patterns or trends.
+-   Distribution Patterns: Visualized the distribution of veterans across different regions and service periods to identify any significant patterns or trends.
 
-## **Conclusion:** 
+## **Conclusion:**
 
 This project provides a comprehensive analysis of the distribution of veterans receiving compensation benefits, highlighting key locations and service periods with the highest counts. The visualizations and statistical analyses offer valuable insights that can inform stakeholders and policymakers in their efforts to support veteran communities.
