--- a/about.qmd
+++ b/about.qmd
@@ -42,13 +42,18 @@ B.S in Public Administration \| December 2011
 
 #### **Lam Research**
 
-| Senior Business Analyst 
+| Senior Business Analyst
 | November 2023 - Jun 2024
+
+#### Marriott International
+
+| Senior Operations Program Manager
+| February 2023 - November 2023
 
 #### **Intel Corporation**
 
 | Senior Operations Program Manager
-| May 2018 - November 2023
+| May 2018 - February 2023
 
 #### **U.S.Navy**
 
@@ -75,9 +80,9 @@ B.S in Public Administration \| December 2011
 
 ## About Me
 
-My extensive experience includes serving as a Business/Data Analyst, where I successfully lead complex, multi-disciplinary projects from start to finish --- working with stakeholders to plan requirements, manage project schedules, identify risks, and communicate clearly with cross-functional partners across the company. I have effectively managed the execution of strategic engineering objectives using tools such as Smartsheet and Lucid Planner, resulting in significant achievements like increasing Intel NUC device production from \$4 million to \$6 million over 10 years and orchestrating collaboration among 13 cross-functional teams to achieve a 33% revenue increase over three quarters.
+My extensive experience includes serving as a Business/Data Intelligence Analyst, where I successfully lead complex, multi-disciplinary projects from start to finish --- working with stakeholders to plan requirements, manage project schedules, identify risks, and communicate clearly with cross-functional partners across the company. I have effectively managed the execution of strategic engineering objectives using tools such as Smartsheet and Lucid Planner, resulting in significant achievements like increasing Intel NUC device production from \$4 million to \$6 million over 10 years and orchestrating collaboration among 13 cross-functional teams to achieve a 33% revenue increase over three quarters.
 
-In my roles, I have showcased my proficiency in managing intricate compensation data processes and reporting at both Lam Research and Intel Corporation. I utilized tools like Power BI and Tableau and developed dashboards using languages such as R, Python, and SQL. As a Program Manager at Intel, I led a team to achieve record-breaking milestones in product introductions. My background also includes serving in the United States Navy, where I managed extensive equipment inventories and led multiple deployments. Additionally, I hold an MBA from Willamette University, where I consulted for the Boys & Girls Club, saving them over \$500K.
+In my roles, I have showcased my proficiency in managing intricate compensation data processes and reporting at both Lam Research and Intel Corporation. I utilized tools like Power BI and Tableau and developed dashboards using languages such as R, Python, and SQL. As a Business Analyst/Program Manager at Intel, I led a team to achieve record-breaking milestones in product introductions. My background also includes serving in the United States Navy, where I managed extensive equipment inventories and led multiple deployments. Additionally, I hold an MBA from Willamette University, where I consulted for the Boys & Girls Club, saving them over \$500K.
 
 I am enthusiastic about discussing how I can contribute to your company's success and look forward to potential collaborations.
 
