--- a/about.qmd
+++ b/about.qmd
@@ -37,7 +37,7 @@ B.S in Public Administration \| December 2011
 
 #### **Astranis Space Technologies**
 
-| Business Intelligence Developer
+| Senior Business Intelligence Developer
 | Jul 2024 - Current
 
 #### **Lam Research**
@@ -47,12 +47,12 @@ B.S in Public Administration \| December 2011
 
 #### Marriott International
 
-| Senior Operations Program Manager
+| Senior Manager Data & Reporting 
 | February 2023 - November 2023
 
 #### **Intel Corporation**
 
-| Senior Operations Program Manager
+| Senior Business Analyst
 | May 2018 - February 2023
 
 #### **U.S.Navy**
