--- a/about.qmd
+++ b/about.qmd
@@ -42,18 +42,18 @@ B.S in Public Administration \| December 2011
 
 #### **Lam Research**
 
-| Senior Business Analyst
+| Senior Data Analyst
 | November 2023 - Jun 2024
 
 #### Marriott International
 
-| Senior Manager Data & Reporting 
+| Senior Manager Data & Reporting
 | February 2023 - November 2023
 
 #### **Intel Corporation**
 
-| Senior Business Analyst
-| May 2018 - February 2023
+| Senior Data Analyst
+| May 2018 - November 2023
 
 #### **U.S.Navy**
 
